@@ -6,7 +6,6 @@ import static com.azure.spring.cloud.appconfiguration.config.implementation.AppC
 import static com.azure.spring.cloud.appconfiguration.config.implementation.TestConstants.TEST_CONN_STRING;
 import static com.azure.spring.cloud.appconfiguration.config.implementation.TestConstants.TEST_CONN_STRING_2;
 import static com.azure.spring.cloud.appconfiguration.config.implementation.TestConstants.TEST_STORE_NAME;
-import static com.azure.spring.cloud.appconfiguration.config.implementation.TestConstants.TEST_STORE_NAME_1;
 import static com.azure.spring.cloud.appconfiguration.config.implementation.TestConstants.TEST_STORE_NAME_2;
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -21,13 +20,11 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.MethodOrderer;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestMethodOrder;
@@ -35,18 +32,16 @@ import org.mockito.Mock;
 import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
+import org.mockito.MockitoSession;
+import org.mockito.quality.Strictness;
 import org.springframework.core.env.CompositePropertySource;
 import org.springframework.core.env.ConfigurableEnvironment;
 import org.springframework.core.env.MutablePropertySources;
 import org.springframework.core.env.PropertySource;
 
-import com.azure.core.http.rest.PagedFlux;
-import com.azure.core.http.rest.PagedResponse;
-import com.azure.data.appconfiguration.ConfigurationAsyncClient;
-import com.azure.data.appconfiguration.models.ConfigurationSetting;
 import com.azure.data.appconfiguration.models.FeatureFlagConfigurationSetting;
+import com.azure.spring.cloud.appconfiguration.config.implementation.autofailover.ReplicaLookUp;
 import com.azure.spring.cloud.appconfiguration.config.implementation.feature.entity.Feature;
-import com.azure.spring.cloud.appconfiguration.config.implementation.http.policy.TracingInfo;
 import com.azure.spring.cloud.appconfiguration.config.implementation.properties.AppConfigurationKeyValueSelector;
 import com.azure.spring.cloud.appconfiguration.config.implementation.properties.AppConfigurationProperties;
 import com.azure.spring.cloud.appconfiguration.config.implementation.properties.AppConfigurationProviderProperties;
@@ -54,8 +49,6 @@ import com.azure.spring.cloud.appconfiguration.config.implementation.properties.
 import com.azure.spring.cloud.appconfiguration.config.implementation.properties.AppConfigurationStoreTrigger;
 import com.azure.spring.cloud.appconfiguration.config.implementation.properties.ConfigStore;
 import com.azure.spring.cloud.appconfiguration.config.implementation.properties.FeatureFlagStore;
-
-import reactor.core.publisher.Flux;
 
 @TestMethodOrder(MethodOrderer.MethodName.class)
 public class AppConfigurationPropertySourceLocatorTest {
@@ -88,50 +81,38 @@ public class AppConfigurationPropertySourceLocatorTest {
     private FeatureFlagStore featureFlagStoreMock;
 
     @Mock
-    private ConfigurationAsyncClient configClientMock;
-
-    @Mock
-    private PagedFlux<ConfigurationSetting> settingsMock;
-
-    @Mock
-    private Iterable<PagedResponse<ConfigurationSetting>> iterableMock;
-
-    @Mock
-    private Iterator<PagedResponse<ConfigurationSetting>> iteratorMock;
-
-    @Mock
-    private Flux<PagedResponse<ConfigurationSetting>> pageMock;
-
-    @Mock
-    private PagedResponse<ConfigurationSetting> pagedMock;
-
-    @Mock
-    private ConfigStore configStoreMock;
-
-    @Mock
     private ConfigStore configStoreMockError;
 
     @Mock
     private AppConfigurationProviderProperties appPropertiesMock;
 
-    private AppConfigurationProperties properties;
+    @Mock
+    private ReplicaLookUp replicaLookUpMock;
 
     @Mock
-    private List<ConfigurationSetting> watchKeyListMock;
+    private FeatureFlagClient featureFlagClientMock;
+
+    @Mock
+    private ConfigStore configStoreMock;
 
     private AppConfigurationPropertySourceLocator locator;
+
+    private AppConfigurationProperties properties;
 
     private AppConfigurationProviderProperties appProperties;
 
     private List<ConfigStore> stores;
 
+    private AppConfigurationStoreMonitoring monitoring;
+
+    private MutablePropertySources sources = new MutablePropertySources();
+
+    private MockitoSession session;
+
     @BeforeEach
     public void setup() {
+        session = Mockito.mockitoSession().initMocks(this).strictness(Strictness.STRICT_STUBS).startMocking();
         MockitoAnnotations.openMocks(this);
-        when(emptyEnvironment.getActiveProfiles()).thenReturn(new String[] {});
-        when(devEnvironment.getActiveProfiles()).thenReturn(new String[] { PROFILE_NAME_1 });
-        when(multiEnvironment.getActiveProfiles()).thenReturn(new String[] { PROFILE_NAME_1, PROFILE_NAME_2 });
-        MutablePropertySources sources = new MutablePropertySources();
 
         sources.addFirst(new PropertySource<String>("refreshArgs") {
 
@@ -141,44 +122,18 @@ public class AppConfigurationPropertySourceLocatorTest {
             }
         });
 
-        when(emptyEnvironment.getPropertySources()).thenReturn(sources);
-        when(devEnvironment.getPropertySources()).thenReturn(sources);
-        when(multiEnvironment.getPropertySources()).thenReturn(sources);
-
         properties = new AppConfigurationProperties();
         properties.setEnabled(true);
         properties.setRefreshInterval(null);
 
-        when(configStoreMock.getConnectionString()).thenReturn(TEST_CONN_STRING);
-        when(configStoreMock.getEndpoint()).thenReturn(TEST_STORE_NAME);
-        when(configStoreMock.isEnabled()).thenReturn(true);
+        TestUtils.addStore(properties, TEST_STORE_NAME, TEST_CONN_STRING, KEY_FILTER);
 
-        stores = new ArrayList<>();
-        stores.add(configStoreMock);
-
-        AppConfigurationStoreMonitoring monitoring = new AppConfigurationStoreMonitoring();
+        monitoring = new AppConfigurationStoreMonitoring();
         monitoring.setEnabled(false);
         AppConfigurationStoreTrigger trigger = new AppConfigurationStoreTrigger();
-        trigger.setKey("sentinel");
         trigger.setKey("test");
-        ArrayList<AppConfigurationStoreTrigger> triggers = new ArrayList<>();
-        triggers.add(trigger);
-        monitoring.setTriggers(triggers);
-        when(configStoreMock.getMonitoring()).thenReturn(monitoring);
 
-        when(configClientMock.listConfigurationSettings(Mockito.any())).thenReturn(settingsMock);
-
-        when(iterableMock.iterator()).thenReturn(iteratorMock);
-        when(iteratorMock.hasNext()).thenReturn(true).thenReturn(false);
-        when(iteratorMock.next()).thenReturn(pagedMock);
-
-        when(watchKeyListMock.iterator()).thenReturn(Collections.emptyIterator());
-
-        when(clientFactoryMock.getAvailableClients(Mockito.anyString(), Mockito.eq(true)))
-            .thenReturn(Arrays.asList(replicaClientMock));
-        when(replicaClientMock.listSettings(Mockito.any())).thenReturn(watchKeyListMock)
-            .thenReturn(watchKeyListMock).thenReturn(watchKeyListMock);
-        when(replicaClientMock.getEndpoint()).thenReturn(TEST_STORE_NAME);
+        monitoring.setTriggers(List.of(trigger));
 
         appProperties = new AppConfigurationProviderProperties();
         appProperties.setVersion("1.0");
@@ -187,24 +142,25 @@ public class AppConfigurationPropertySourceLocatorTest {
         appProperties.setDefaultMaxBackoff((long) 600);
         appProperties.setDefaultMinBackoff((long) 30);
 
-        AppConfigurationKeyValueSelector selectedKeys = new AppConfigurationKeyValueSelector().setKeyFilter(KEY_FILTER);
-        List<AppConfigurationKeyValueSelector> selects = new ArrayList<>();
-        selects.add(selectedKeys);
-        when(configStoreMock.getSelects()).thenReturn(selects);
+        properties.getStores().get(0).setFeatureFlags(featureFlagStoreMock);
+        properties.getStores().get(0).setMonitoring(monitoring);
+        stores = properties.getStores();
     }
 
     @AfterEach
     public void cleanup() throws Exception {
         MockitoAnnotations.openMocks(this).close();
+        session.finishMocking();
         AppConfigurationPropertySourceLocator.STARTUP.set(true);
     }
 
     @Test
     public void compositeSourceIsCreated() {
-        when(configStoreMock.getFeatureFlags()).thenReturn(featureFlagStoreMock);
+        setupEmptyEnvironment();
+        when(featureFlagClientMock.getProperties()).thenReturn(Map.of());
 
         locator = new AppConfigurationPropertySourceLocator(appProperties, clientFactoryMock,
-            keyVaultClientFactory, null, stores);
+            keyVaultClientFactory, null, stores, replicaLookUpMock, featureFlagClientMock);
 
         try (MockedStatic<StateHolder> stateHolderMock = Mockito.mockStatic(StateHolder.class)) {
             stateHolderMock.when(() -> StateHolder.updateState(Mockito.any())).thenReturn(null);
@@ -224,25 +180,25 @@ public class AppConfigurationPropertySourceLocatorTest {
 
     @Test
     public void compositeSourceIsCreatedWithMonitoring() {
+        setupEmptyEnvironment();
+        when(featureFlagClientMock.getProperties()).thenReturn(Map.of());
+
         String watchKey = "wk1";
-        String watchValue = "0";
-        String watchLabel = EMPTY_LABEL;
         AppConfigurationStoreMonitoring monitoring = new AppConfigurationStoreMonitoring();
         monitoring.setEnabled(true);
-        List<AppConfigurationStoreTrigger> watchKeys = new ArrayList<>();
+
         AppConfigurationStoreTrigger trigger = new AppConfigurationStoreTrigger();
         trigger.setKey(watchKey);
-        trigger.setLabel(watchLabel);
-        watchKeys.add(trigger);
-        monitoring.setTriggers(watchKeys);
+        trigger.setLabel(EMPTY_LABEL);
+        monitoring.setTriggers(List.of(trigger));
 
-        when(configStoreMock.getMonitoring()).thenReturn(monitoring);
-        when(configStoreMock.getFeatureFlags()).thenReturn(featureFlagStoreMock);
+        properties.getStores().get(0).setMonitoring(monitoring);
+
         when(replicaClientMock.getWatchKey(Mockito.eq(watchKey), Mockito.anyString()))
-            .thenReturn(TestUtils.createItem("", watchKey, watchValue, watchLabel, ""));
+            .thenReturn(TestUtils.createItem("", watchKey, "0", EMPTY_LABEL, ""));
 
         locator = new AppConfigurationPropertySourceLocator(appProperties, clientFactoryMock, keyVaultClientFactory,
-            null, stores);
+            null, stores, replicaLookUpMock, featureFlagClientMock);
 
         try (MockedStatic<StateHolder> stateHolderMock = Mockito.mockStatic(StateHolder.class)) {
             stateHolderMock.when(() -> StateHolder.updateState(Mockito.any())).thenReturn(null);
@@ -262,25 +218,27 @@ public class AppConfigurationPropertySourceLocatorTest {
     }
 
     @Test
-    public void compositeSourceIsCreatedWithMonitoringNoWatchKey() {
+    public void compositeSourceIsCreatedWithMonitoringWatchKeyDoesNotExist() {
+        // The listed Watch Key doesn't have a value in app config. When one is added will cause a refresh.
+        setupEmptyEnvironment();
+        when(featureFlagClientMock.getProperties()).thenReturn(Map.of());
+
         String watchKey = "wk1";
-        String watchLabel = EMPTY_LABEL;
         AppConfigurationStoreMonitoring monitoring = new AppConfigurationStoreMonitoring();
         monitoring.setEnabled(true);
-        List<AppConfigurationStoreTrigger> watchKeys = new ArrayList<>();
+
         AppConfigurationStoreTrigger trigger = new AppConfigurationStoreTrigger();
         trigger.setKey(watchKey);
-        trigger.setLabel(watchLabel);
-        watchKeys.add(trigger);
-        monitoring.setTriggers(watchKeys);
+        trigger.setLabel(EMPTY_LABEL);
+        monitoring.setTriggers(List.of(trigger));
 
-        when(configStoreMock.getMonitoring()).thenReturn(monitoring);
-        when(configStoreMock.getFeatureFlags()).thenReturn(featureFlagStoreMock);
+        properties.getStores().get(0).setMonitoring(monitoring);
+
         when(replicaClientMock.getWatchKey(Mockito.eq(watchKey), Mockito.anyString()))
             .thenReturn(null);
 
         locator = new AppConfigurationPropertySourceLocator(appProperties, clientFactoryMock, keyVaultClientFactory,
-            null, stores);
+            null, stores, replicaLookUpMock, featureFlagClientMock);
 
         try (MockedStatic<StateHolder> stateHolderMock = Mockito.mockStatic(StateHolder.class)) {
             stateHolderMock.when(() -> StateHolder.updateState(Mockito.any())).thenReturn(null);
@@ -301,10 +259,14 @@ public class AppConfigurationPropertySourceLocatorTest {
 
     @Test
     public void devSourceIsCreated() {
-        when(configStoreMock.getFeatureFlags()).thenReturn(featureFlagStoreMock);
+        when(devEnvironment.getActiveProfiles()).thenReturn(new String[] { PROFILE_NAME_1 });
+        when(devEnvironment.getPropertySources()).thenReturn(sources);
+        when(clientFactoryMock.getAvailableClients(Mockito.anyString(), Mockito.eq(true))).thenReturn(Arrays.asList(replicaClientMock));
+        when(replicaClientMock.listSettings(Mockito.any())).thenReturn(List.of());
+        when(featureFlagClientMock.getProperties()).thenReturn(Map.of());
 
         locator = new AppConfigurationPropertySourceLocator(appProperties, clientFactoryMock, keyVaultClientFactory,
-            null, stores);
+            null, stores, replicaLookUpMock, featureFlagClientMock);
 
         try (MockedStatic<StateHolder> stateHolderMock = Mockito.mockStatic(StateHolder.class)) {
             stateHolderMock.when(() -> StateHolder.updateState(Mockito.any())).thenReturn(null);
@@ -323,10 +285,14 @@ public class AppConfigurationPropertySourceLocatorTest {
 
     @Test
     public void multiSourceIsCreated() {
-        when(configStoreMock.getFeatureFlags()).thenReturn(featureFlagStoreMock);
+        when(multiEnvironment.getActiveProfiles()).thenReturn(new String[] { PROFILE_NAME_1, PROFILE_NAME_2 });
+        when(multiEnvironment.getPropertySources()).thenReturn(sources);
+        when(clientFactoryMock.getAvailableClients(Mockito.anyString(), Mockito.eq(true))).thenReturn(Arrays.asList(replicaClientMock));
+        when(replicaClientMock.listSettings(Mockito.any())).thenReturn(List.of());
+        when(featureFlagClientMock.getProperties()).thenReturn(Map.of());
 
         locator = new AppConfigurationPropertySourceLocator(appProperties, clientFactoryMock, keyVaultClientFactory,
-            null, stores);
+            null, stores, replicaLookUpMock, featureFlagClientMock);
 
         try (MockedStatic<StateHolder> stateHolderMock = Mockito.mockStatic(StateHolder.class)) {
             stateHolderMock.when(() -> StateHolder.updateState(Mockito.any())).thenReturn(null);
@@ -345,20 +311,22 @@ public class AppConfigurationPropertySourceLocatorTest {
 
     @Test
     public void storeCreatedWithFeatureFlags() {
+        setupEmptyEnvironment();
+        when(featureFlagClientMock.getProperties()).thenReturn(Map.of("fake_features", new Feature()));
+
         FeatureFlagStore featureFlagStore = new FeatureFlagStore();
         featureFlagStore.setEnabled(true);
         featureFlagStore.validateAndInit();
 
-        List<ConfigurationSetting> featureList = new ArrayList<>();
         FeatureFlagConfigurationSetting featureFlag = new FeatureFlagConfigurationSetting("Alpha", false);
         featureFlag.setValue("");
-        featureList.add(featureFlag);
 
-        when(configStoreMock.getFeatureFlags()).thenReturn(featureFlagStore);
-        when(replicaClientMock.listSettings(Mockito.any())).thenReturn(featureList);
+        properties.getStores().get(0).setFeatureFlags(featureFlagStore);
+
+        when(replicaClientMock.listSettings(Mockito.any())).thenReturn(List.of(featureFlag));
 
         locator = new AppConfigurationPropertySourceLocator(appProperties, clientFactoryMock, keyVaultClientFactory,
-            null, stores);
+            null, stores, replicaLookUpMock, featureFlagClientMock);
 
         try (MockedStatic<StateHolder> stateHolderMock = Mockito.mockStatic(StateHolder.class)) {
             stateHolderMock.when(() -> StateHolder.updateState(Mockito.any())).thenReturn(null);
@@ -366,79 +334,36 @@ public class AppConfigurationPropertySourceLocatorTest {
             assertTrue(source instanceof CompositePropertySource);
 
             Collection<PropertySource<?>> sources = ((CompositePropertySource) source).getPropertySources();
-            // Application name: foo and active profile: dev,prod, should construct below
-            // composite Property Source:
-            // [/foo_prod/, /foo_dev/, /foo/, /application_prod/, /application_dev/,
-            // /application/]
             String[] expectedSourceNames = new String[] {
-                "FM_store1/ ",
-                KEY_FILTER + "store1/\0"
+                KEY_FILTER + "store1/\0",
+                "feature_management"
             };
             assertEquals(expectedSourceNames.length, sources.size());
             assertArrayEquals((Object[]) expectedSourceNames, sources.stream().map(PropertySource::getName).toArray());
-        }
-    }
-
-    @Test
-    public void storeCreatedWithFeatureFlagsRequireAll() {
-        FeatureFlagStore featureFlagStore = new FeatureFlagStore();
-        featureFlagStore.setEnabled(true);
-        featureFlagStore.validateAndInit();
-
-        List<ConfigurationSetting> featureList = new ArrayList<>();
-        FeatureFlagConfigurationSetting featureFlag = new FeatureFlagConfigurationSetting("Alpha", true);
-        featureFlag.setValue("{\"id\":null,\"description\":null,\"display_name\":null,\"enabled\":true,\"conditions\":{\"requirement_type\":\"All\", \"client_filters\":[{\"name\":\"AlwaysOn\",\"parameters\":{}}]}}");
-        featureList.add(featureFlag);
-
-        when(configStoreMock.getFeatureFlags()).thenReturn(featureFlagStore);
-        when(replicaClientMock.listSettings(Mockito.any())).thenReturn(featureList);
-        when(replicaClientMock.getTracingInfo()).thenReturn(new TracingInfo(false, false, 0, null));
-
-        locator = new AppConfigurationPropertySourceLocator(appProperties, clientFactoryMock, keyVaultClientFactory,
-            null, stores);
-
-        try (MockedStatic<StateHolder> stateHolderMock = Mockito.mockStatic(StateHolder.class)) {
-            stateHolderMock.when(() -> StateHolder.updateState(Mockito.any())).thenReturn(null);
-            PropertySource<?> source = locator.locate(emptyEnvironment);
-            assertTrue(source instanceof CompositePropertySource);
-
-            Collection<PropertySource<?>> sources = ((CompositePropertySource) source).getPropertySources();
-            // Application name: foo and active profile: dev,prod, should construct below
-            // composite Property Source:
-            // [/foo_prod/, /foo_dev/, /foo/, /application_prod/, /application_dev/,
-            // /application/]
-            String[] expectedSourceNames = new String[] {
-                "FM_store1/ ",
-                KEY_FILTER + "store1/\0"
-            };
-            assertEquals(expectedSourceNames.length, sources.size());
-            Object[] propertySources = sources.stream().map(c -> c.getProperty("feature-management.Alpha")).toArray();
-            Feature alpha = (Feature) propertySources[0];
-            assertEquals("All", alpha.getRequirementType());
-            assertArrayEquals((Object[]) expectedSourceNames, sources.stream().map(PropertySource::getName).toArray());
-
         }
     }
 
     @Test
     public void storeCreatedWithFeatureFlagsWithMonitoring() {
+        setupEmptyEnvironment();
+        when(featureFlagClientMock.getProperties()).thenReturn(Map.of("fake_features", new Feature()));
+
         AppConfigurationStoreMonitoring monitoring = new AppConfigurationStoreMonitoring();
         monitoring.setEnabled(true);
         FeatureFlagStore featureFlagStore = new FeatureFlagStore();
         featureFlagStore.setEnabled(true);
         featureFlagStore.validateAndInit();
 
-        List<ConfigurationSetting> featureList = new ArrayList<>();
         FeatureFlagConfigurationSetting featureFlag = new FeatureFlagConfigurationSetting("Alpha", false);
         featureFlag.setValue("");
-        featureList.add(featureFlag);
 
-        when(configStoreMock.getFeatureFlags()).thenReturn(featureFlagStore);
-        when(configStoreMock.getMonitoring()).thenReturn(monitoring);
-        when(replicaClientMock.listSettings(Mockito.any())).thenReturn(featureList);
+        properties.getStores().get(0).setFeatureFlags(featureFlagStore);
+        properties.getStores().get(0).setMonitoring(monitoring);
+
+        when(replicaClientMock.listSettings(Mockito.any())).thenReturn(List.of(featureFlag));
 
         locator = new AppConfigurationPropertySourceLocator(appProperties, clientFactoryMock, keyVaultClientFactory,
-            null, stores);
+            null, stores, replicaLookUpMock, featureFlagClientMock);
 
         try (MockedStatic<StateHolder> stateHolderMock = Mockito.mockStatic(StateHolder.class)) {
             stateHolderMock.when(() -> StateHolder.updateState(Mockito.any())).thenReturn(null);
@@ -446,13 +371,9 @@ public class AppConfigurationPropertySourceLocatorTest {
             assertTrue(source instanceof CompositePropertySource);
 
             Collection<PropertySource<?>> sources = ((CompositePropertySource) source).getPropertySources();
-            // Application name: foo and active profile: dev,prod, should construct below
-            // composite Property Source:
-            // [/foo_prod/, /foo_dev/, /foo/, /application_prod/, /application_dev/,
-            // /application/]
             String[] expectedSourceNames = new String[] {
-                "FM_store1/ ",
-                KEY_FILTER + "store1/\0"
+                KEY_FILTER + "store1/\0",
+                "feature_management"
             };
             assertEquals(expectedSourceNames.length, sources.size());
             assertArrayEquals((Object[]) expectedSourceNames, sources.stream().map(PropertySource::getName).toArray());
@@ -461,10 +382,11 @@ public class AppConfigurationPropertySourceLocatorTest {
 
     @Test
     public void watchedKeyCheck() {
-        when(configStoreMock.getFeatureFlags()).thenReturn(featureFlagStoreMock);
+        setupEmptyEnvironment();
+        when(featureFlagClientMock.getProperties()).thenReturn(Map.of());
 
         locator = new AppConfigurationPropertySourceLocator(appProperties, clientFactoryMock, keyVaultClientFactory,
-            null, stores);
+            null, stores, replicaLookUpMock, featureFlagClientMock);
 
         try (MockedStatic<StateHolder> stateHolderMock = Mockito.mockStatic(StateHolder.class)) {
             stateHolderMock.when(() -> StateHolder.updateState(Mockito.any())).thenReturn(null);
@@ -472,10 +394,6 @@ public class AppConfigurationPropertySourceLocatorTest {
             assertTrue(source instanceof CompositePropertySource);
 
             Collection<PropertySource<?>> sources = ((CompositePropertySource) source).getPropertySources();
-            // Application name: foo and active profile: dev,prod, should construct below
-            // composite Property Source:
-            // [/foo_prod/, /foo_dev/, /foo/, /application_prod/, /application_dev/,
-            // /application/]
             String[] expectedSourceNames = new String[] {
                 KEY_FILTER + "store1/\0"
             };
@@ -486,21 +404,25 @@ public class AppConfigurationPropertySourceLocatorTest {
 
     @Test
     public void defaultFailFastThrowException() {
-        AppConfigurationStoreTrigger trigger = new AppConfigurationStoreTrigger();
-        List<AppConfigurationStoreTrigger> triggers = new ArrayList<>();
-        triggers.add(trigger);
-        AppConfigurationStoreMonitoring monitor = new AppConfigurationStoreMonitoring();
-        monitor.setEnabled(true);
-        monitor.setTriggers(triggers);
-
+        when(emptyEnvironment.getActiveProfiles()).thenReturn(new String[] {});
+        when(emptyEnvironment.getPropertySources()).thenReturn(sources);
+        when(clientFactoryMock.getAvailableClients(Mockito.anyString(), Mockito.eq(true))).thenReturn(Arrays.asList(replicaClientMock));
+        when(configStoreMock.getEndpoint()).thenReturn(TEST_STORE_NAME);
+        when(configStoreMock.isEnabled()).thenReturn(true);
+        when(configStoreMock.getSelects()).thenReturn(List.of());
         when(configStoreMock.getFeatureFlags()).thenReturn(featureFlagStoreMock);
         when(configStoreMock.isFailFast()).thenReturn(true);
+
+        AppConfigurationStoreTrigger trigger = new AppConfigurationStoreTrigger();
+        AppConfigurationStoreMonitoring monitor = new AppConfigurationStoreMonitoring();
+        monitor.setEnabled(true);
+        monitor.setTriggers(List.of(trigger));
+
         when(configStoreMock.getMonitoring()).thenReturn(monitor);
 
         locator = new AppConfigurationPropertySourceLocator(appProperties, clientFactoryMock, keyVaultClientFactory,
-            null, stores);
+            null, List.of(configStoreMock), replicaLookUpMock, featureFlagClientMock);
 
-        when(clientFactoryMock.getAvailableClients(Mockito.anyString())).thenReturn(Arrays.asList(replicaClientMock));
         when(replicaClientMock.getWatchKey(Mockito.any(), Mockito.anyString())).thenThrow(new RuntimeException());
         RuntimeException e = assertThrows(RuntimeException.class, () -> locator.locate(emptyEnvironment));
         assertEquals("Failed to generate property sources for " + TEST_STORE_NAME, e.getMessage());
@@ -509,15 +431,13 @@ public class AppConfigurationPropertySourceLocatorTest {
 
     @Test
     public void refreshThrowException() throws IllegalArgumentException {
-        when(configStoreMock.getFeatureFlags()).thenReturn(featureFlagStoreMock);
+        setupEmptyEnvironment();
+        when(replicaClientMock.listSettings(any())).thenThrow(new RuntimeException());
+
         AppConfigurationPropertySourceLocator.STARTUP.set(false);
 
         locator = new AppConfigurationPropertySourceLocator(appProperties, clientFactoryMock, keyVaultClientFactory,
-            null, stores);
-
-        when(clientFactoryMock.getAvailableClients(Mockito.anyString())).thenReturn(Arrays.asList(replicaClientMock));
-        when(replicaClientMock.getWatchKey(Mockito.any(), Mockito.anyString())).thenThrow(new RuntimeException());
-        when(replicaClientMock.listSettings(any())).thenThrow(new RuntimeException());
+            null, stores, replicaLookUpMock, featureFlagClientMock);
 
         try (MockedStatic<StateHolder> stateHolderMock = Mockito.mockStatic(StateHolder.class)) {
             stateHolderMock.when(() -> StateHolder.getLoadState(Mockito.anyString())).thenReturn(true);
@@ -527,14 +447,21 @@ public class AppConfigurationPropertySourceLocatorTest {
     }
 
     @Test
-    @Disabled
     public void notFailFastShouldPass() {
-        when(configStoreMock.isFailFast()).thenReturn(false);
-        locator = new AppConfigurationPropertySourceLocator(appProperties, clientFactoryMock, keyVaultClientFactory,
-            null, stores);
-
-        when(configStoreMock.isFailFast()).thenReturn(false);
+        when(featureFlagClientMock.getProperties()).thenReturn(Map.of());
+        when(emptyEnvironment.getActiveProfiles()).thenReturn(new String[] {});
+        when(emptyEnvironment.getPropertySources()).thenReturn(sources);
+        when(clientFactoryMock.getAvailableClients(Mockito.anyString(), Mockito.eq(true))).thenReturn(Arrays.asList(replicaClientMock));
         when(configStoreMock.getEndpoint()).thenReturn(TEST_STORE_NAME);
+        when(configStoreMock.isEnabled()).thenReturn(true);
+        when(configStoreMock.getSelects()).thenReturn(List.of());
+        when(configStoreMock.getFeatureFlags()).thenReturn(featureFlagStoreMock);
+        when(configStoreMock.isFailFast()).thenReturn(false);
+
+        locator = new AppConfigurationPropertySourceLocator(appProperties, clientFactoryMock, keyVaultClientFactory,
+            null, List.of(configStoreMock), replicaLookUpMock, featureFlagClientMock);
+
+        properties.getStores().get(0).setFailFast(false);
 
         try (MockedStatic<StateHolder> stateHolderMock = Mockito.mockStatic(StateHolder.class)) {
             stateHolderMock.when(() -> StateHolder.updateState(Mockito.any())).thenReturn(null);
@@ -542,20 +469,19 @@ public class AppConfigurationPropertySourceLocatorTest {
             assertTrue(source instanceof CompositePropertySource);
 
             // Once a store fails it should stop attempting to load
-            verify(configStoreMock, times(2)).isFailFast();
+            verify(configStoreMock, times(3)).isFailFast();
         }
     }
 
     @Test
     public void multiplePropertySourcesExistForMultiStores() {
-        when(configStoreMock.getEndpoint()).thenReturn(TEST_STORE_NAME);
-
-        properties = new AppConfigurationProperties();
-        TestUtils.addStore(properties, TEST_STORE_NAME_1, TEST_CONN_STRING, KEY_FILTER);
+        setupEmptyEnvironment();
+        when(featureFlagClientMock.getProperties()).thenReturn(Map.of());
         TestUtils.addStore(properties, TEST_STORE_NAME_2, TEST_CONN_STRING_2, KEY_FILTER);
 
         locator = new AppConfigurationPropertySourceLocator(appProperties,
-            clientFactoryMock, keyVaultClientFactory, null, properties.getStores());
+            clientFactoryMock, keyVaultClientFactory, null, properties.getStores(), replicaLookUpMock,
+            featureFlagClientMock);
 
         try (MockedStatic<StateHolder> stateHolderMock = Mockito.mockStatic(StateHolder.class)) {
             stateHolderMock.when(() -> StateHolder.updateState(Mockito.any())).thenReturn(null);
@@ -564,7 +490,7 @@ public class AppConfigurationPropertySourceLocatorTest {
 
             Collection<PropertySource<?>> sources = ((CompositePropertySource) source).getPropertySources();
             String[] expectedSourceNames = new String[] { KEY_FILTER + TEST_STORE_NAME_2 + "/\0",
-                KEY_FILTER + TEST_STORE_NAME_1 + "/\0" };
+                KEY_FILTER + TEST_STORE_NAME + "/\0" };
             assertEquals(2, sources.size());
             assertArrayEquals((Object[]) expectedSourceNames, sources.stream().map(PropertySource::getName).toArray());
         }
@@ -572,9 +498,8 @@ public class AppConfigurationPropertySourceLocatorTest {
 
     @Test
     public void awaitOnError() {
-        List<ConfigStore> configStores = new ArrayList<>();
-        configStores.add(configStoreMockError);
-
+        when(clientFactoryMock.getAvailableClients(Mockito.anyString(), Mockito.eq(true))).thenReturn(Arrays.asList(replicaClientMock));
+        when(replicaClientMock.listSettings(Mockito.any())).thenReturn(List.of());
         when(appPropertiesMock.getPrekillTime()).thenReturn(5);
 
         ConfigurableEnvironment env = Mockito.mock(ConfigurableEnvironment.class);
@@ -601,15 +526,12 @@ public class AppConfigurationPropertySourceLocatorTest {
         when(configStoreMockError.isFailFast()).thenReturn(true);
         when(configStoreMockError.getEndpoint()).thenReturn("");
 
-        when(configStoreMockError.getFeatureFlags()).thenReturn(featureFlagStoreMock);
-
-        when(clientFactoryMock.getAvailableClients(Mockito.anyString())).thenReturn(Arrays.asList(replicaClientMock));
         when(replicaClientMock.listSettings(Mockito.any())).thenThrow(new NullPointerException(""));
         when(appPropertiesMock.getPrekillTime()).thenReturn(-60);
         when(appPropertiesMock.getStartDate()).thenReturn(Instant.now());
 
         locator = new AppConfigurationPropertySourceLocator(appPropertiesMock, clientFactoryMock, keyVaultClientFactory,
-            null, configStores);
+            null, List.of(configStoreMockError), replicaLookUpMock, featureFlagClientMock);
 
         assertThrows(RuntimeException.class, () -> locator.locate(env));
         verify(appPropertiesMock, times(1)).getPrekillTime();
@@ -617,10 +539,13 @@ public class AppConfigurationPropertySourceLocatorTest {
 
     @Test
     public void storeDisabled() {
-        when(configStoreMock.isEnabled()).thenReturn(false);
+        when(emptyEnvironment.getActiveProfiles()).thenReturn(new String[] {});
+        when(emptyEnvironment.getPropertySources()).thenReturn(sources);
+        properties.getStores().get(0).setEnabled(false);
+        properties.getStores().get(0).setMonitoring(monitoring);
 
         locator = new AppConfigurationPropertySourceLocator(appProperties, clientFactoryMock, keyVaultClientFactory,
-            null, stores);
+            null, stores, replicaLookUpMock, featureFlagClientMock);
         try (MockedStatic<StateHolder> stateHolderMock = Mockito.mockStatic(StateHolder.class)) {
             stateHolderMock.when(() -> StateHolder.updateState(Mockito.any())).thenReturn(null);
             PropertySource<?> source = locator.locate(emptyEnvironment);
@@ -630,5 +555,12 @@ public class AppConfigurationPropertySourceLocatorTest {
 
             assertEquals(0, sources.size());
         }
+    }
+
+    private void setupEmptyEnvironment() {
+        when(emptyEnvironment.getActiveProfiles()).thenReturn(new String[] {});
+        when(emptyEnvironment.getPropertySources()).thenReturn(sources);
+        when(clientFactoryMock.getAvailableClients(Mockito.anyString(), Mockito.eq(true))).thenReturn(Arrays.asList(replicaClientMock));
+        when(replicaClientMock.listSettings(Mockito.any())).thenReturn(List.of());
     }
 }
